--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-redux": "^9.1.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
