--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "formik": "^2.4.6",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "prisma": "^5.18.0",
