--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "date-fns": "^3.6.0",
     "formik": "^2.4.6",
     "html2canvas": "^1.4.1",
+    "html2pdf": "^0.0.11",
+    "html2pdf.js": "^0.12.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.428.0",
